--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -16,7 +16,7 @@
         android:background="@color/app_background">
 
         <ImageView
-            android:id="@+id/activity_main_image_of_the_day"
+            android:id="@+id/potentially_hazardous_big_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
@@ -24,8 +24,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@drawable/asteroid_safe"
-            android:contentDescription="@string/nasa_picture_of_day_content_description_format"/>
+            tools:srcCompat="@drawable/asteroid_safe" />
 
         <ScrollView
             android:layout_width="0dp"
@@ -33,7 +32,7 @@
             android:padding="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/activity_main_image_of_the_day">
+            app:layout_constraintTop_toBottomOf="@+id/potentially_hazardous_big_image">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -49,7 +48,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/close_approach_data_title"
-                        android:textColor="@color/default_text_color" />
+                        android:textColor="@color/default_text_color"
+                        android:contentDescription="@string/close_approach_data_title"/>
 
                     <TextView
                         android:id="@+id/close_approach_date"
@@ -58,7 +58,8 @@
                         android:layout_marginTop="4dp"
                         android:text="@{asteroid.closeApproachDate}"
                         android:textColor="@color/default_text_color"
-                        tools:text="2020-02-01" />
+                        tools:text="2020-02-01"
+                        android:contentDescription="@{asteroid.closeApproachDate}"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -78,7 +79,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/absolute_magnitude_title"
-                            android:textColor="@color/default_text_color" />
+                            android:textColor="@color/default_text_color"
+                            android:contentDescription="@string/absolute_magnitude_title"/>
 
                         <TextView
                             android:id="@+id/absolute_magnitude"
@@ -87,7 +89,8 @@
                             android:layout_marginTop="4dp"
                             android:textColor="@color/default_text_color"
                             app:astronomicalUnitText="@{asteroid.absoluteMagnitude}"
-                            tools:text="25.126 au" />
+                            tools:text="25.126 au"
+                            android:contentDescription="@{Double.toString(asteroid.absoluteMagnitude)}"/>
                     </LinearLayout>
 
                     <ImageView
@@ -95,7 +98,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="16dp"
-                        app:srcCompat="@drawable/ic_help_circle" />
+                        app:srcCompat="@drawable/ic_help_circle"
+                        android:contentDescription="@string/click_for_help"/>
 
                 </LinearLayout>
 
@@ -104,7 +108,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="@string/estimated_diameter_title"
-                    android:textColor="@color/default_text_color" />
+                    android:textColor="@color/default_text_color"
+                    android:contentDescription="@string/estimated_diameter_title"/>
 
                 <TextView
                     android:id="@+id/estimated_diameter"
@@ -113,14 +118,16 @@
                     android:layout_marginTop="4dp"
                     android:textColor="@color/default_text_color"
                     app:kmUnitText="@{asteroid.estimatedDiameter}"
-                    tools:text="0.82 km" />
+                    tools:text="0.82 km"
+                    android:contentDescription="@{Double.toString(asteroid.estimatedDiameter)}"/>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="@string/relative_velocity_title"
-                    android:textColor="@color/default_text_color" />
+                    android:textColor="@color/default_text_color"
+                    android:contentDescription="@string/relative_velocity_title"/>
 
                 <TextView
                     android:id="@+id/relative_velocity"
@@ -129,14 +136,16 @@
                     android:layout_marginTop="4dp"
                     android:textColor="@color/default_text_color"
                     app:velocityText="@{asteroid.relativeVelocity}"
-                    tools:text="11.9 km/s" />
+                    tools:text="11.9 km/s"
+                    android:contentDescription="@{Double.toString(asteroid.relativeVelocity)}"/>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="@string/distance_from_earth_title"
-                    android:textColor="@color/default_text_color" />
+                    android:textColor="@color/default_text_color"
+                    android:contentDescription="@string/distance_from_earth_title"/>
 
                 <TextView
                     android:id="@+id/distance_from_earth"
@@ -145,7 +154,8 @@
                     android:layout_marginTop="4dp"
                     android:textColor="@color/default_text_color"
                     app:astronomicalUnitText="@{asteroid.distanceFromEarth}"
-                    tools:text="0.0924 au" />
+                    tools:text="0.0924 au"
+                    android:contentDescription="@{Double.toString(asteroid.distanceFromEarth)}"/>
 
             </LinearLayout>
         </ScrollView>
