--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -30,7 +30,7 @@
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
                 app:srcCompat="@drawable/placeholder_picture_of_day"
-                android:contentDescription="@{viewModel.pictureOfDay.title}"/>
+                android:contentDescription="@string/this_is_nasa_s_picture_of_day_showing_nothing_yet"/>
 
             <TextView
                 android:id="@+id/textView"
@@ -42,7 +42,8 @@
                 android:text="@string/image_of_the_day"
                 android:textColor="@android:color/white"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:contentDescription="@string/nasa_picture_of_day_content_description_format"/>
         </FrameLayout>
 
         <androidx.recyclerview.widget.RecyclerView
@@ -64,10 +65,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminate="true"
-            android:visibility="gone"
+            app:goneIfNotNull="@{viewModel.asteroids}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/progress_bar"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
