--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -47,19 +47,19 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:contentDescription="@string/close_approach_data_title"
                         android:text="@string/close_approach_data_title"
-                        android:textColor="@color/default_text_color"
-                        android:contentDescription="@string/close_approach_data_title"/>
+                        android:textColor="@color/default_text_color" />
 
                     <TextView
                         android:id="@+id/close_approach_date"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
+                        android:contentDescription="@{asteroid.closeApproachDate}"
                         android:text="@{asteroid.closeApproachDate}"
                         android:textColor="@color/default_text_color"
-                        tools:text="2020-02-01"
-                        android:contentDescription="@{asteroid.closeApproachDate}"/>
+                        tools:text="2020-02-01" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -78,28 +78,28 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:contentDescription="@string/absolute_magnitude_title"
                             android:text="@string/absolute_magnitude_title"
-                            android:textColor="@color/default_text_color"
-                            android:contentDescription="@string/absolute_magnitude_title"/>
+                            android:textColor="@color/default_text_color" />
 
                         <TextView
                             android:id="@+id/absolute_magnitude"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="4dp"
+                            android:contentDescription="@{Double.toString(asteroid.absoluteMagnitude)}"
                             android:textColor="@color/default_text_color"
                             app:astronomicalUnitText="@{asteroid.absoluteMagnitude}"
-                            tools:text="25.126 au"
-                            android:contentDescription="@{Double.toString(asteroid.absoluteMagnitude)}"/>
+                            tools:text="25.126 au" />
                     </LinearLayout>
 
                     <ImageView
                         android:id="@+id/help_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:contentDescription="@string/click_for_help"
                         android:padding="16dp"
-                        app:srcCompat="@drawable/ic_help_circle"
-                        android:contentDescription="@string/click_for_help"/>
+                        app:srcCompat="@drawable/ic_help_circle" />
 
                 </LinearLayout>
 
@@ -107,55 +107,55 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:contentDescription="@string/estimated_diameter_title"
                     android:text="@string/estimated_diameter_title"
-                    android:textColor="@color/default_text_color"
-                    android:contentDescription="@string/estimated_diameter_title"/>
+                    android:textColor="@color/default_text_color" />
 
                 <TextView
                     android:id="@+id/estimated_diameter"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
+                    android:contentDescription="@{Double.toString(asteroid.estimatedDiameter)}"
                     android:textColor="@color/default_text_color"
                     app:kmUnitText="@{asteroid.estimatedDiameter}"
-                    tools:text="0.82 km"
-                    android:contentDescription="@{Double.toString(asteroid.estimatedDiameter)}"/>
+                    tools:text="0.82 km" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:contentDescription="@string/relative_velocity_title"
                     android:text="@string/relative_velocity_title"
-                    android:textColor="@color/default_text_color"
-                    android:contentDescription="@string/relative_velocity_title"/>
+                    android:textColor="@color/default_text_color" />
 
                 <TextView
                     android:id="@+id/relative_velocity"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
+                    android:contentDescription="@{Double.toString(asteroid.relativeVelocity)}"
                     android:textColor="@color/default_text_color"
                     app:velocityText="@{asteroid.relativeVelocity}"
-                    tools:text="11.9 km/s"
-                    android:contentDescription="@{Double.toString(asteroid.relativeVelocity)}"/>
+                    tools:text="11.9 km/s" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:contentDescription="@string/distance_from_earth_title"
                     android:text="@string/distance_from_earth_title"
-                    android:textColor="@color/default_text_color"
-                    android:contentDescription="@string/distance_from_earth_title"/>
+                    android:textColor="@color/default_text_color" />
 
                 <TextView
                     android:id="@+id/distance_from_earth"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
+                    android:contentDescription="@{Double.toString(asteroid.distanceFromEarth)}"
                     android:textColor="@color/default_text_color"
                     app:astronomicalUnitText="@{asteroid.distanceFromEarth}"
-                    tools:text="0.0924 au"
-                    android:contentDescription="@{Double.toString(asteroid.distanceFromEarth)}"/>
+                    tools:text="0.0924 au" />
 
             </LinearLayout>
         </ScrollView>
